--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -126,8 +126,5 @@
     "Lost money": "Misgelopen geld",
     "Leave empty to edit the stock without affecting the discrepancy.": "Laat leeg om de voorraad bij te werken zonder de discrepantie te beïnvloeden.",
     ":actor_user_name updated the stock": ":actor_user_name heeft de voorraad bijgewerkt",
-    "Illustration showing a computer screen with a graph and a folder": "Illustratie laat een computerscherm zien met een grafiek en een map",
-    "Illustration showing a world map with planes and a phone": "Illustratie laat een wereldkaart zien met vliegtuigen en een telefoon",
-    "Illustration showing a pale woman with a cup of coffee working with a computer": "Illustratie laat een blanke vrouw zien die een kop koffie vasthoudt en met een computer aan het werken is",
-    "Image showing desktop interface of TurfApp": "Afbeelding die de desktopweergave van TurfApp laat zien"
+    "The free, ad-less and open-source tally system": "Het gratis, advertentieloze en open-source turfsysteem"
 }
