--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -130,5 +130,5 @@
     "Illustration showing a world map with planes and a phone": "Illustratie laat een wereldkaart zien met vliegtuigen en een telefoon",
     "Illustration showing a pale woman with a cup of coffee working with a computer": "Illustratie laat een blanke vrouw zien die een kop koffie vasthoudt en met een computer aan het werken is",
     "Image showing desktop interface of TurfApp": "Afbeelding die de desktopweergave van TurfApp laat zien",
-    "By registering you give TurfApp explicit permission to process and store your username, email-address and password until your account is removed.": "Door te registeren geef je TurfApp expliciete toestemming om je gebruikersnaam, email-adres en wachtwoord op te slaan totdat uw account wordt verwijderd."
+    "By checking this box you give TurfApp explicit permission to process and store your username, email-address and password until your account is removed.": "Door dit vakje aan te vinken geef je TurfApp expliciete toestemming om je gebruikersnaam, e-mailadres en wachtwoord op te slaan totdat uw account wordt verwijderd."
 }
