Improve layout of auth page

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -113,5 +113,10 @@
     "Lost money": "Misgelopen geld",
     "Leave empty to edit the stock without affecting the discrepancy.": "Laat leeg om de voorraad bij te werken zonder de discrepantie te beïnvloeden.",
     ":actor_user_name updated the stock": ":actor_user_name heeft de voorraad bijgewerkt",
-    "The free, ad-less and open-source tally system": "Het gratis, advertentieloze en open-source turfsysteem"
+    "The free, ad-less and open-source tally system": "Het gratis, advertentieloze en open-source turfsysteem",
+    "TurfApp is the free, ad-less and open-source tally system. It is the ideal help in consumption management.": "TurfApp is het gratis, advertentieloze en open-source turfsysteem. Het is de ideale consumptiehuishoudhulp.",
+    "This free and ad-less service has been developed to keep track of drink stock and consumption. Indispensable in any student house or office.": "Deze gratis en advertentieloze app is ontwikkeld om de drinkvoorraad en drinkconsumptie makkelijk bij te kunnen houden. Onmisbaar dus in het studentenhuis of op de zaak!",
+    "By signing up for and signing in to this service you accept our:": "Door u aan te melden voor en in te loggen op deze service, accepteert u onze:",
+    "Our privacy policy": "Ons privacybeleid",
+    "TurfApp.nl Terms": "Voorwaarden TurfApp.nl"
 }
