--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -118,5 +118,12 @@
     "This free and ad-less service has been developed to keep track of drink stock and consumption. Indispensable in any student house or office.": "Deze gratis en advertentieloze app is ontwikkeld om de drinkvoorraad en drinkconsumptie makkelijk bij te kunnen houden. Onmisbaar dus in het studentenhuis of op de zaak!",
     "By signing up for and signing in to this service you accept our:": "Door u aan te melden voor en in te loggen op deze service, accepteert u onze:",
     "Our privacy policy": "Ons privacybeleid",
-    "TurfApp.nl Terms": "Voorwaarden TurfApp.nl"
+    "TurfApp.nl Terms": "Voorwaarden TurfApp.nl",
+    "About TurfApp": "Over TurfApp",
+    "Go to the homepage": "Ga naar de homepage",
+    "I agree to TurfApp's <a href=\":privacy_policy\">privacy policy</a>.": "Ik ga akkoord met <a href=\":privacy_policy\">het privacybeleid</a> van TurfApp.",
+    "Don't have an account yet?": "Heb je nog geen account?",
+    "Register now": "Registreer je nu",
+    "Already have an account?": "Heb je al een account?",
+    "Log in": "Inloggen"
 }
