--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -116,7 +116,7 @@
     "The free, ad-less and open-source tally system": "Het gratis, advertentieloze en open-source turfsysteem",
     "TurfApp is the free, ad-less and open-source tally system. It is the ideal help in consumption management.": "TurfApp is het gratis, advertentieloze en open-source turfsysteem. Het is de ideale consumptiehuishoudhulp.",
     "This free and ad-less service has been developed to keep track of drink stock and consumption. Indispensable in any student house or office.": "Deze gratis en advertentieloze app is ontwikkeld om de drinkvoorraad en drinkconsumptie makkelijk bij te kunnen houden. Onmisbaar dus in het studentenhuis of op de zaak!",
-    "By signing up for and signing in to this service you accept our:": "Door u aan te melden voor en in te loggen op deze service, accepteert u onze:",
+    "By signing up for and signing in to this service you accept:": "Door u aan te melden voor en in te loggen op deze service, accepteert u:",
     "Our privacy policy": "Ons privacybeleid",
     "TurfApp.nl Terms": "Voorwaarden TurfApp.nl",
     "About TurfApp": "Over TurfApp",
@@ -129,5 +129,9 @@
     "Remember me": "Aangemeld blijven",
     "Forgot your password?": "Wachtwoord vergeten?",
     "Reset it": "Opnieuw instellen",
-    "Reset password": "Wachtwoord opnieuw instellen"
+    "Reset password": "Wachtwoord opnieuw instellen",
+    "Hello!": "Hallo!",
+    "Reset your password": "Herstel je wachtwoord",
+    "You are receiving this email because you requested a password reset for your TurfApp account.": "Je ontvangt deze e-mail omdat je hebt aangegeven het wachtwoord van je TurfApp-account opnieuw in te willen stellen.",
+    "Please go to the following page and choose a new password:": "Klik op de onderstaande link om een nieuw wachtwoord in te stellen:"
 }
